Added missing files.

--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Multi-page template</title>
+    <title>PhoneGap 3 Tutorial First App</title>
     <link rel="stylesheet" href="css/jquery.mobile-1.2.1.min.css" />
 
 </head>
@@ -40,32 +40,32 @@
                 <ul data-role="listview">
                     <li>
                         <h3>Connection Type</h3>
-                        <p id="conn-type">Wifi</p>
+                        <p id="conn-type"></p>
 
                     </li>
                     <li>
-                        <h3>Device Name</h3>
-                        <p id="model">Model.</p>
+                        <h3>Device Model</h3>
+                        <p id="model"></p>
 
                     </li>
                     <li>
                         <h3>Cordova Version</h3>
-                        <p id="version">Version</p>
+                        <p id="version"></p>
 
                     </li>
                     <li>
                         <h3>Platform</h3>
-                        <p id="platform">platform</p>
+                        <p id="platform"></p>
 
                     </li>
                     <li>
                         <h3>Device UUID</h3>
-                        <p id="uuid">uuid</p>
+                        <p id="uuid"></p>
 
                     </li>
                     <li>
                         <h3>OS Version</h3>
-                        <p id="device-vesion">device-version</p>
+                        <p id="device-vesion"></p>
 
                     </li>
                 </ul>
